--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -18,16 +18,6 @@ h1 {
 }
 
 /*
- * Top
- */
-.navbar-brand,
-.navbar-nav li {
-    line-height: 10px;
-    height: 30px;
-    padding-top: 0;
-}
-
- /*
  * Sidebar
  */
 .sidebar {
@@ -81,4 +71,8 @@ h1 {
 .placeholder img {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+#onaffiliate {
+  display: none;
 }
