--- a/src/car2.css
+++ b/src/car2.css
@@ -9,10 +9,10 @@ body {
   margin-top:0px;
 
 }
-*{
+/*{     /* Test Borders
 border: 0px dashed blue;
-
-}
+ 
+}*/
 #header{
     position: fixed;
     display: block;
@@ -99,6 +99,7 @@ color: black;
 }
 h6{
     text-align:center;
+    font-size: 12px;
 }
 li{
     font-size: 20px;
